// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Emptystate With Link 1`] = `
<div
  className="sc-VigVT gbOMtC"
>
  <div
    className="sc-htoDjs cKPBTk sc-emptystate"
  >
    <div
      className="sc-iwsKbI iKbbyA"
    >
      <div
        className="sc-gqjmRU kuYmln"
      >
        <i
          className="fas fa-server"
        />
      </div>
    </div>
    <div
      className="sc-iwsKbI iKbbyA"
    >
      <h3
        className="sc-dnqmqq fNfZUU"
      >
        A list of 
        nodes
         will appear here
      </h3>
    </div>
    <div
      className="sc-iwsKbI iKbbyA"
    >
      <h3
        className="sc-dnqmqq fNfZUU"
      >
        There are no 
        nodes
         created yet, let's create your first
         
        node
        .
      </h3>
    </div>
    <div
      className="sc-gZMcBi hhVYpv"
    >
      <button
        className="sc-bxivhb dCQlZC sc-button"
        disabled={false}
        onClick={[Function]}
        size="large"
        title=""
        type="button"
      >
        <span
          className="sc-bZQynM iMWVsx"
        >
          <span
            className="sc-button-text"
          >
            <span
              className="sc-ifAKCX joVDVz"
              size="large"
            >
              <i
                className="fas fa-plus"
              />
            </span>
            <span
              className="sc-EHOje boinrg"
            >
              Create node
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Emptystate Without Link 1`] = `
<div
  className="sc-VigVT gbOMtC"
>
  <div
    className="sc-htoDjs cKPBTk sc-emptystate"
  >
    <div
      className="sc-iwsKbI iKbbyA"
    >
      <div
        className="sc-gqjmRU kuYmln"
      >
        <i
          className="fas fa-server"
        />
      </div>
    </div>
    <div
      className="sc-iwsKbI iKbbyA"
    >
      <h3
        className="sc-dnqmqq fNfZUU"
      >
        A list of 
        nodes
         will appear here
      </h3>
    </div>
    <div
      className="sc-iwsKbI iKbbyA"
    >
      <h3
        className="sc-dnqmqq fNfZUU"
      >
        There are no 
        nodes
         created yet, let's create your first
         
        node
        .
      </h3>
    </div>
  </div>
</div>
`;
